<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_sorting_layout"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Status"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/checkbox_waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkbox_inProccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inProccess"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkbox_sorted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorted"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkbox_sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sold"
            android:checked="true"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sorting"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/checkbox_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkbox_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkbox_firstClassPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstClassPlus"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkbox_firstClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstClass"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkbox_secondClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondClass"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkbox_mix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mix"
            android:checked="true"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="For sale"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/checkbox_forSale_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkbox_forSale_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:checked="true"/>

    </LinearLayout>




</LinearLayout>